--- a/src/css/utils.scss
+++ b/src/css/utils.scss
@@ -1,11 +1,11 @@
 .absolute {position: absolute;}
 .relative {position: relative;}
 
+.hide {display: none;}
 .flex {display: flex;}
 
 .justify-center {justify-content: center;}
 
 .items-center {align-items: center;}
 
-.text-center {text-align: center;
-}
+.text-center {text-align: center;}
