--- a/src/css/typography.scss
+++ b/src/css/typography.scss
@@ -1,5 +1,5 @@
-.font-serif {font-family: 'Open Sans';}
-.font-sans  {font-family: 'Arapey';}
+.font-sans  {font-family: 'Open Sans';}
+.font-serif {font-family: 'Arapey';}
 
 .font-0\.75  {font-size: 0.75rem;}
 .font-0\.875 {font-size: 0.875rem;}
@@ -11,6 +11,11 @@
 .font-2\.5   {font-size: 2.5rem;}
 .font-2\.75  {font-size: 2.75rem;}
 
-.bold   {font-weight: bold;}
+.bold {font-weight: bold;}
 
 .italic {font-style: italic;}
+
+.no-underline,
+.no-underline:hover
+           {text-decoration: none;}
+.underline {text-decoration: underline;}
