--- a/src/css/reset.scss
+++ b/src/css/reset.scss
@@ -1,11 +1,10 @@
-html {
+body {
   font-family: 'Open Sans';
-  font-size: 16px;
-  color: $darkGray;
+  font-size: 14px;
 }
 
 body, div, h1, h2, h3, p {
-  margin: 0;
-  border: 0;
+  margin:  0;
+  border:  0;
   padding: 0;
 }
