--- a/src/css/typography.scss
+++ b/src/css/typography.scss
@@ -1,6 +1,7 @@
 .font-sans  {font-family: 'Open Sans';}
 .font-serif {font-family: 'Arapey';}
 
+// Option 1
 .font-0\.75  {font-size: 0.75rem;}
 .font-0\.875 {font-size: 0.875rem;}
 .font-1      {font-size: 1rem;}
@@ -10,6 +11,17 @@
 .font-2      {font-size: 2rem;}
 .font-2\.5   {font-size: 2.5rem;}
 .font-2\.75  {font-size: 2.75rem;}
+
+// Option 2
+.font-size-xs {font-size: 0.75rem;}
+.font-size-s  {font-size: 0.875rem;}
+.font-size-m  {font-size: 1rem;}
+.font-size-l  {font-size: 1.25rem;}
+.font-size-xl {font-size: 1.5rem;}
+.font-size-2x {font-size: 1.75rem;}
+.font-size-3x {font-size: 2rem;}
+.font-size-4x {font-size: 2.5rem;}
+.font-size-5x {font-size: 2.75rem;}
 
 .bold {font-weight: bold;}
 
