--- a/src/css/utils.scss
+++ b/src/css/utils.scss
@@ -1,11 +1,15 @@
+/* Position */
 .absolute {position: absolute;}
 .relative {position: relative;}
 
+/* Display */
 .hide {display: none;}
 .flex {display: flex;}
 
+/* Flexbox */
 .justify-center {justify-content: center;}
 
 .items-center {align-items: center;}
 
+/* Text Alignment */
 .text-center {text-align: center;}
