--- a/src/css/reset.scss
+++ b/src/css/reset.scss
@@ -1,6 +1,6 @@
-body {
+body, button, input, textarea {
   font-family: 'Open Sans';
-  font-size: 14px;
+  font-size: 16px;
 }
 
 body, div, h1, h2, h3, p {
