--- a/src/css/colors.scss
+++ b/src/css/colors.scss
@@ -1,19 +1,19 @@
-$black:       #000000;
-$blue:        #0054A0;
-$gray:        #6F6F6F;
-$grayDark:    #4A4A4A;
-$grayLight:   #F3F3F3;
-$green:       #349D44;
-$orange:      #E27208;
-$orangeLight: #F9AB62;
-$purple:      #6A3FC4;
-$purpleLight: #CFC4ED;
-$red:         #BD0606;
-$white:       #FFFFFF;
+$black:        #000000;
+$blue:         #0054A0;
+$dark-gray:    #4A4A4A;
+$gray:         #6F6F6F;
+$green:        #349D44;
+$light-gray:   #F3F3F3;
+$light-orange: #F9AB62;
+$light-purple: #CFC4ED;
+$orange:       #E27208;
+$purple:       #6A3FC4;
+$red:          #BD0606;
+$white:        #FFFFFF;
 
 body {
   background-color: $white;
-  color: $grayDark;
+  color: $dark-gray;
 }
 
 a                 {color: $blue;}
@@ -23,7 +23,7 @@ a:visited:hover   {color: darken($purple, 20%);}
 
 button.bg-blue:hover      {background-color: darken($blue, 20%);}
 button.bg-gray:hover      {background-color: darken($gray, 20%);}
-button.bg-gray-dark:hover {background-color: darken($grayDark, 20%);}
+button.bg-gray-dark:hover {background-color: darken($dark-gray, 20%);}
 button.bg-orange:hover    {background-color: darken($orange, 20%);}
 button.bg-white:hover     {background-color: darken($white, 20%);}
 
@@ -35,17 +35,17 @@ classes from the reusable class library.
 .dark-mode {
   color: $white;
 
-  a                 {color: $orangeLight;}
-  a:active, a:hover {color: darken($orangeLight, 20%);}
-  a:visited         {color: $purpleLight;}
-  a:visited:hover   {color: darken($purpleLight, 20%);}
+  a                 {color: $light-orange;}
+  a:active, a:hover {color: darken($light-orange, 20%);}
+  a:visited         {color: $light-purple;}
+  a:visited:hover   {color: darken($light-purple, 20%);}
 }
 
 .bg-black      {background-color: $black;}
 .bg-blue       {background-color: $blue;}
 .bg-gray       {background-color: $gray;}
-.bg-gray-dark  {background-color: $grayDark;}
-.bg-gray-light {background-color: $grayLight;}
+.bg-gray-dark  {background-color: $dark-gray;}
+.bg-gray-light {background-color: $light-gray;}
 .bg-green      {background-color: $green;}
 .bg-orange     {background-color: $orange;}
 .bg-purple     {background-color: $purple;}
@@ -55,10 +55,10 @@ classes from the reusable class library.
 .border-0          {border: 0}
 .border-black      {border: 1px solid $black;}
 .border-blue       {border: 1px solid $blue;}
-.border-gray-dark  {border: 1px solid $grayDark;}
+.border-gray-dark  {border: 1px solid $dark-gray;}
 .border-gray       {border: 1px solid $gray;}
 .border-green      {border: 1px solid $green;}
-.border-gray-light {border: 1px solid $grayLight;}
+.border-gray-light {border: 1px solid $light-gray;}
 .border-orange     {border: 1px solid $orange;}
 .border-purple     {border: 1px solid $purple;}
 .border-red        {border: 1px solid $red;}
@@ -67,21 +67,21 @@ classes from the reusable class library.
 .border-b-black      {border-bottom: 1px solid $black;}
 .border-b-blue       {border-bottom: 1px solid $blue;}
 .border-b-gray       {border-bottom: 1px solid $gray;}
-.border-b-gray-dark  {border-bottom: 1px solid $grayDark;}
-.border-b-gray-light {border-bottom: 1px solid $grayLight;}
+.border-b-gray-dark  {border-bottom: 1px solid $dark-gray;}
+.border-b-gray-light {border-bottom: 1px solid $light-gray;}
 .border-b-green      {border-bottom: 1px solid $green;}
 .border-b-orange     {border-bottom: 1px solid $orange;}
 .border-b-purple     {border-bottom: 1px solid $purple;}
 .border-b-red        {border-bottom: 1px solid $red;}
 .border-b-white      {border-bottom: 1px solid $white;}
 
-.color-black      {color: $black;}
-.color-blue       {color: $blue;}
-.color-gray       {color: $gray;}
-.color-gray-dark  {color: $grayDark;}
-.color-gray-light {color: $grayLight;}
-.color-green      {color: $green;}
-.color-orange     {color: $orange;}
-.color-purple     {color: $purple;}
-.color-red        {color: $red;}
-.color-white      {color: $white;}
+.font-color--black      {color: $black;}
+.font-color--blue       {color: $blue;}
+.font-color--gray       {color: $gray;}
+.font-color--gray-dark  {color: $dark-gray;}
+.font-color--gray-light {color: $light-gray;}
+.font-color--green      {color: $green;}
+.font-color--orange     {color: $orange;}
+.font-color--purple     {color: $purple;}
+.font-color--red        {color: $red;}
+.font-color--white      {color: $white;}
