--- a/src/css/utils.scss
+++ b/src/css/utils.scss
@@ -22,8 +22,8 @@
 .text-center {text-align: center;}
 
 /* Border Radius */
-.round-5  {border-radius:  5px;}
-.round-50 {border-radius: 50px;}
+.radius-5    {border-radius: 5px;}
+.radius-1\/2 {border-radius: 50%;}
 
 /* Whitespace */
 .truncate {
